# threadPool

./: .gitignore  CMakeLists.txt  main.cpp  uncrustify.cfg
.github/workflows/: cmake.yml
TestTask/libs/exampleProject/test/: example_test.cpp
TestTask/libs/fileCalculator/: CMakeLists.txt
TestTask/libs/fileCalculator/include/task/: itask.h
TestTask/libs/fileCalculator/source/: itask.cpp  reader.cpp  taskMult.cpp  taskSum.cpp  taskSumSqr.cpp
TestTask/libs/fileCalculator/test/: readerTest.cpp  taskTest.cpp
TestTask/libs/printer/: CMakeLists.txt
TestTask/libs/printer/include/printer/: printer.h
TestTask/libs/printer/source/: printer.cpp
googletests/: CMakeLists.txt
googletests/gtest/: CMakeLists.txt
libs/exampleProject/: CMakeLists.txt  unittest.cmake
libs/exampleProject/include/: exampleclass.h
libs/exampleProject/source/: exampleclass.cpp
libs/fileCalculator/: CMakeLists.txt
libs/fileCalculator/include/fileCalculator/: fileCalculator.h
libs/fileCalculator/source/: fileCalculator.cpp
libs/fileCalculator/test/: fileCalculatorTest.cpp
libs/fileCalculator/test/config/: conf.cmake
libs/printer/: CMakeLists.txt
libs/printer/test/: printer_test.cpp
libs/reader/: CMakeLists.txt
libs/reader/include/reader/: reader.h
libs/reader/source/: reader.cpp
libs/reader/test/: readerTest.cpp
libs/reader/test/config/: conf.cmake  probe.txt
libs/task/: CMakeLists.txt
libs/task/include/task/: itask.h  taskCalculate.h  taskMult.h  taskReadCalc.h  taskSum.h  taskSumSqr.h  taskfactory.h
libs/task/source/: itask.cpp  taskCalculate.cpp  taskMult.cpp  taskReadCalc.cpp  taskSum.cpp  taskSumSqr.cpp
libs/task/test/: taskTest.cpp
libs/threadPool/: CMakeLists.txt
libs/threadPool/include/threadPool/: threadPool.h
libs/threadPool/source/: threadPool.cpp
libs/threadPool/test/: testTask.h  threadPoolTest.cpp
libs/threadPool/test/config/: conf.cmake
libs/threadPoolTask/: CMakeLists.txt
libs/threadPoolTask/include/threadPoolTask/: iThreadPoolTask.h  threadPoolTaskMult.h  threadPoolTaskSum.h  threadPoolTaskSumSqr.h
libs/threadPoolTask/source/: iThreadPoolTask.cpp  threadPoolTaskMult.cpp  threadPoolTaskSum.cpp  threadPoolTaskSumSqr.cpp
libs/threadPoolTask/test/: taskTest.cpp
libs/writer/: CMakeLists.txt
libs/writer/include/writer/: writer.h
libs/writer/source/: writer.cpp
libs/writer/test/: writerTest.cpp
